chore: guardar progreso limpio (pipeline DVC + modelos + reportes)

--- a/01_EDA_and_Data_Cleaning.ipynb
+++ b/01_EDA_and_Data_Cleaning.ipynb
@@ -111,14 +111,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Evita errores si NO estás en Google Colab\n",
+    "# Solo monta Drive si estamos en Colab\n",
     "try:\n",
     "    import google.colab  # type: ignore\n",
+    "    IN_COLAB = True\n",
+    "except Exception:\n",
+    "    IN_COLAB = False\n",
+    "\n",
+    "if IN_COLAB:\n",
     "    from google.colab import drive  # type: ignore\n",
     "    drive.mount('/content/drive', force_remount=True)\n",
-    "    print(\"Google Drive montado (Colab).\")\n",
-    "except Exception:\n",
-    "    print(\"No estoy en Colab: omito montar Google Drive.\")\n"
+    "else:\n",
+    "    print(\"No Colab: saltando montaje de Drive.\")\n",
+    "\n"
    ]
   },
   {
